<resources>
    <string name="app_name">AssistTeachMe</string>

    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot password?\u0020<u>Reset it</u></string>
    <string name="password">password</string>
    <string name="email_address">email address</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="confirm_password">confirm password</string>
    <string name="new_password">new password</string>
    <string name="reset_pass">RESET PASSWORD</string>
    <string name="reset_pass_btn">RESET PASS</string>
    <string name="i_agree_with_terms_and_conditions">I agree with\u0020<u>Terms</u> and\u0020<u>Conditions</u></string>
    <string name="reset_passw">RESET PASSWORD</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="create_account">Create account</string>
    <string name="alexa_teach_me_2018_all_rights_reserved"><b>Alexa Teach Me 2018.</b> All rights reserved.</string>
    <string name="description_flower_rose">A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over a hundred species and thousands of cultivars.</string>
    <string name="description_flower_carnation">Dianthus caryophyllus, the carnation or clove pink, is a species of Dianthus. It is probably native to the Mediterranean region but its exact range is unknown due to extensive cultivation for the last 2,000 years.</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about_activityy">AboutActivityy</string>
    <string name="my_account">My Account</string>
    <string name="desciption_my_account">Here you can edit your account’s information, courses you started and the progress for each one.</string>
    <string name="Contact_my_account">Contact us at\u0020<u>hei@alexateachme.com</u>, if you need any help.</string>
    <string name="logout">logout</string>
    <string name="upload_file">Upload file</string>
    <string name="account_information">Account Information</string>
    <string name="image_should_have_maximum_15_mb_size">Image should have maximum 15 MB size.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="started_courses">Started courses</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_question_finish">QuestionFinishActivity</string>
    <string name="title_activity_congrats">CongratsActivity</string>
    <string name="browse_through_best_learning_courses_for_alexa">Browse through best learning courses for Alexa</string>
    <string name="pick_the_one_you_like_and_start_learning">Pick the one you like and start learning</string>
    <string name="discover_more">Discover more</string>
    <string name="confirm_passwordd">confirm password</string>
    <string name="last_name">last name</string>
    <string name="email_addresss">email address</string>
    <string name="button">Button</string>
    <string name="browse_through_best_learning_courses_for_alexaa">Browse through best learning courses for Alexa</string>
    <string name="pick_the_one_you_like_and_start_learningg">Pick the one you like and start learning</string>

</resources>
