<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="424dp"
            android:background="@color/whiteText"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="90dp"
                android:layout_height="25dp"

                android:layout_marginEnd="165dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_logo_teach_me"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnMenu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.025" />

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/shape_menu_button"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_shape"


                android:text="Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/AlexaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="51dp"
                android:gravity="left"
                android:text="@string/my_account"
                android:textAlignment="center"
                android:textColor="@color/whiteText"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pick"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="59dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="110dp"
                android:gravity="left"

                android:text="@string/desciption_my_account"

                android:textColor="@color/fullWhite"

                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/AlexaTxt"

                app:layout_constraintHorizontal_bias="0.22"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/pick2"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"

                android:layout_marginTop="30dp"

                android:gravity="left"
                android:text="@string/Contact_my_account"
                android:textColor="@color/fullWhite"

                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick" />

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginEnd="270dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/shape_button"
                android:text="@string/logout"
                android:textAlignment="center"
                android:textColor="@color/whiteText"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick2" />

        </android.support.constraint.ConstraintLayout>


        <Button
            android:id="@+id/chooseBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_btn_white"
            android:padding="5dp"
            android:text="@string/upload_file"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/blueButton"
            app:layout_constraintHorizontal_bias="0.703"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profilePhoto"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="30dp"
            android:gravity="left"
            android:text="@string/account_information"
            android:textAlignment="center"
            android:textColor="@color/colorButtonDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/profilePhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchLayout" />

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginStart="36dp"

            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchLayout"
            app:srcCompat="@drawable/capture2" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:text="@string/image_should_have_maximum_15_mb_size"
            app:layout_constraintStart_toEndOf="@+id/profilePhoto"
            app:layout_constraintTop_toBottomOf="@+id/acc" />


        <EditText
            android:id="@+id/nameAccount"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape_field_grey"
            android:hint="Duane Mendoza"
            android:inputType="textEmailAddress"
            android:paddingRight="3dp"
            android:paddingStart="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseBtn" />

        <EditText
            android:id="@+id/emailAccount"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_field_grey"
            android:hint="duanemendoza@gmail.com"
            android:inputType="textEmailAddress"
            android:paddingRight="3dp"
            android:paddingStart="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passS" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passS"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_field_grey"
            android:paddingRight="3dp"
            android:paddingStart="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameAccount"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/PassAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="sans-serif"
                android:hint="......."
                android:inputType="textPassword"
                android:textAlignment="viewStart"

                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorHint" />
        </android.support.design.widget.TextInputLayout>
        />

        <Button
            android:id="@+id/btnSaveChange"
            android:layout_width="56dp"
            android:layout_height="31dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/shape_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/whiteText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAccount" />

        <Button
            android:id="@+id/btnCancelChange"
            android:layout_width="56dp"
            android:layout_height="31dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="28dp"
            android:background="@null"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAccount" />


        <TextView
            android:id="@+id/started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="80dp"
            android:gravity="left"
            android:text="@string/started_courses"
            android:textAlignment="center"
            android:textColor="@color/colorButtonDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAccount" />
        <LinearLayout
            android:id="@+id/recyclerViewLayout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/started">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewLayout"
            android:text="@string/alexa_teach_me_2018_all_rights_reserved"
            android:textColor="@color/colorHint"
            />


    </android.support.constraint.ConstraintLayout>



</ScrollView>