<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <android.support.constraint.ConstraintLayout
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="151dp"
            android:layout_height="76dp"
            android:layout_marginTop="98dp"
            android:background="@drawable/ic_logo_teach_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/resetEmail"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="105dp"
            android:background="@drawable/shape_field"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <android.support.design.widget.TextInputLayout

            app:hintEnabled="false"
            android:id="@+id/resetPass"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_field"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:paddingStart="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetEmail"
            app:passwordToggleEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:background="@null"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="new password"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorHint"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            app:hintEnabled="false"
            android:id="@+id/resetPassConf"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_field"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:paddingStart="28dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPass"
            app:passwordToggleEnabled="true">


            <android.support.design.widget.TextInputEditText
                android:background="@null"
                android:id="@+id/etPassworddddd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="confirm password"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorHint"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="280dp"
            android:layout_height="59dp"
            android:layout_marginBottom="100dp"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/shape_button"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@color/whiteText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPassConf" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>